Fixes to visibility of household tabs.  Mobile adjustments for viewer (eliminate left/right margin).

--- a/src/TRAISI/ClientApp/src/survey-viewer-app/app/components/question-container/question-container.component.scss
+++ b/src/TRAISI/ClientApp/src/survey-viewer-app/app/components/question-container/question-container.component.scss
@@ -9,8 +9,6 @@
 }
 
 .question-widget {
-	margin-left: 15px;
-	margin-right: 15px;
 
 	//position: absolute;
 	left: 0;
