--- a/src/TRAISI/ClientApp/src/survey-viewer-app/app/components/special-page-builder/special-page-builder.component.scss
+++ b/src/TRAISI/ClientApp/src/survey-viewer-app/app/components/special-page-builder/special-page-builder.component.scss
@@ -13,6 +13,7 @@
 }
 
 #special-page-header {
+	z-index: 1000;
 	-webkit-user-select: none; /* Safari */
 	-khtml-user-select: none; /* Konqueror HTML */
 		-moz-user-select: none; /* Firefox */
